--- a/package.json
+++ b/package.json
@@ -6,17 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
+    "@prisma/client": "^4.12.0",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "classnames": "^2.3.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "recharts": "^2.5.0"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
+    "postcss": "^8.4.21",
+    "prettier": "2.8.7",
+    "prisma": "^4.12.0",
+    "tailwindcss": "^3.3.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   }
 }
