--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "recharts": "^2.5.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
     "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "autoprefixer": "^10.4.14",
     "jest": "^29.5.0",
