--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "seed": "ts-node prisma/seeder/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
