fix: env var usage

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL='mysql://fr9v5vh79ecfna8hc495:pscale_pw_frKzic4pNIr2mOVX0gdbJ5eZSlcQO4kEcrDPuX0fDhd@aws.connect.psdb.cloud/flow-test?sslaccept=strict'
+DATABASE_URL='mysql://ymq92zq6kbb8355nys9p:pscale_pw_JIhMjKlZ2YIA3L0x3wKDhUHUVncezUiH0aebP40dGmM@aws.connect.psdb.cloud/flow-test?sslaccept=strict'
+API_URL=http://localhost:3000
