--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL='mysql://ymq92zq6kbb8355nys9p:pscale_pw_JIhMjKlZ2YIA3L0x3wKDhUHUVncezUiH0aebP40dGmM@aws.connect.psdb.cloud/flow-test?sslaccept=strict'
-API_URL=http://localhost:3000
+DATABASE_URL='mysql://z8kse8zw63wz0tkrsir6:pscale_pw_fMxCoGYcQ8KGFnZUshOll1JnRwYpFdmwkoG68yOjasG@aws.connect.psdb.cloud/flow-test?sslaccept=strict'
+API_URL=http://localhost:300git 0
